--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,8 +13,8 @@
 
 @import '../sass/components/competitors';
 @import '../sass/components/questions';
-// @import '../sass/components/button';
-// @import '../sass/components/features';
+@import '../sass/components/img-animate';
+@import '../sass/components/clients';
 // @import '../sass/components/backdrop';
 // @import '../sass/components/modal';
 // @import '../sass/components/occupation';
