--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,6 +1,7 @@
 .page-header {
   @extend %auto-margin;
-  padding-bottom: 20%;
+  max-width: 100vw;
+  // padding-bottom: 20px;
 }
 .page-header__container {
   @extend %auto-margin;
@@ -22,7 +23,7 @@
   // max-width: 1500px;
 }
 .page-header__main-contain {
-  max-width: 1500px;
+  max-width: 1600px;
   width: 100%;
   @extend %auto-margin;
   padding: 0 15px 0 15px;
