--- a/css/main.css
+++ b/css/main.css
@@ -1469,6 +1469,36 @@ a {
   }
 }
 
+.form-section {
+  margin: 0 auto;
+  background-image: url("./images/form-bg.png");
+}
+
+.form-container {
+  margin: 0 auto;
+}
+
+.form {
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 651px;
+  padding: 50px 50px 100px 50px;
+}
+
+.form > input {
+  border: 0 0 1px 0;
+}
+
+.footer {
+  margin: 0 auto;
+}
+
 .footer__title {
   font-style: normal;
   font-weight: 900;
@@ -1495,8 +1525,10 @@ a {
 .footter__contain {
   position: relative;
   text-align: center;
-  background: linear-gradient(60deg, #543ab7 0%, #00acc1 100%);
   color: white;
+  margin: 0 auto;
+  margin-top: -15vh;
+  z-index: -1;
 }
 
 .logo {
@@ -1526,7 +1558,19 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
+}
+
+.line {
+  color: #6D7B81;
+  max-width: 1200px;
+  height: 1px;
+  width: 100%;
+  margin-top: 120px;
 }
 
 .waves {
