--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,3 +1,6 @@
+.footer {
+  margin: 0 auto;
+}
 .footer__title {
   font-style: normal;
 font-weight: 900;
@@ -25,12 +28,17 @@ color: #949DA7;
 .footter__contain {
   position: relative;
   text-align: center;
-  background: linear-gradient(
-    60deg,
-    rgba(84, 58, 183, 1) 0%,
-    rgba(0, 172, 193, 1) 100%
-  );
+  // background: linear-gradient(
+  //   60deg,
+  //   rgba(84, 58, 183, 1) 0%,
+  //   rgba(0, 172, 193, 1) 100%
+  // );
   color: white;
+  margin: 0 auto;
+  margin-top: -15vh;
+  z-index: -1;
+  // max-width: 100vw;
+  // overflow: hidden;
 }
 .logo {
   width: 50px;
@@ -53,8 +61,16 @@ color: #949DA7;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   text-align: center;
+ 
 }
+.line {
+  color: #6D7B81;
+  max-width: 1200px;
+  height: 1px;
+  width: 100%;
+margin-top: 120px;}
 
 .waves {
   position: relative;
