--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,7 +15,7 @@
 @import '../sass/components/questions';
 @import '../sass/components/img-animate';
 @import '../sass/components/clients';
-// @import '../sass/components/backdrop';
+@import '../sass/components/form';
 // @import '../sass/components/modal';
 // @import '../sass/components/occupation';
 // @import '../sass/components/team';
