--- a/sass/components/_img-animate.scss
+++ b/sass/components/_img-animate.scss
@@ -3,19 +3,49 @@
   height: 275px;
   width: 423px;
   margin: 0 auto;
+  margin-left: 28px;
+  // box-sizing: border-box;
+  filter: drop-shadow(20px 20px 80px rgba(0, 0, 0, 0.15));
+  // &::after {
+  //   position: absolute;
+  //   width: 408px;
+  //   height: 341px;
+  //   background: rgba(253, 251, 251, 0.1);
+  //   backdrop-filter: blur(20px);
+  // }
 }
 .animate-img {
   position: absolute;
-  height: 275px;
+  height: auto;
   width: 423px;
   left: 0;
   transition: opacity 0.5s ease-in-out;
+  
+  // box-sizing: content-box;
+}
+._shadov-img {
+  position: absolute;
+  top: 35%;
+  left: 20%;
+  width: 90%;
+  transition: opacity 0.5s ease-in-out;
+  // opacity: 0.2;
+filter: blur(20px);
+z-index: -1 !important;
 }
 .first-img {
   animation-name: cf3FadeInOut;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
   animation-iteration-count: infinite;
-  animation-duration: 7s;
+  animation-duration: 5s;
+  animation-direction: alternate;
+  z-index: 1;
+}
+.sec-img {
+  animation-name: hhhhhjjjjj;
+  animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+  animation-iteration-count: infinite;
+  animation-duration: 5s;
   animation-direction: alternate;
   z-index: 1;
 }
@@ -23,14 +53,28 @@
   0% {
     opacity: 1;
   }
-  45% {
+  40% {
     opacity: 1;
   }
-  55% {
+  60% {
     opacity: 0;
   }
   100% {
     opacity: 0;
+  }
+}
+@keyframes hhhhhjjjjj {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
   }
 }
 // #img_container {
@@ -39,7 +83,7 @@
 //     width:450px;
 //     margin:0 auto;
 //     }
-    
+
 //     #img_container img {
 //     position:absolute;
 //     left:0;
@@ -48,7 +92,7 @@
 //     -o-transition: opacity 1s ease-in-out;
 //     transition: opacity 1s ease-in-out;
 //     }
-    
+
 //     @-webkit-keyframes cf3FadeInOut {
 //     0% {
 //     opacity:1;
@@ -63,7 +107,7 @@
 //     opacity:0;
 //     }
 //     }
-    
+
 //     @-moz-keyframes cf3FadeInOut {
 //     0% {
 //     opacity:1;
@@ -78,7 +122,7 @@
 //     opacity:0;
 //     }
 //     }
-    
+
 //     @-o-keyframes cf3FadeInOut {
 //     0% {
 //     opacity:1;
@@ -93,7 +137,7 @@
 //     opacity:0;
 //     }
 //     }
-    
+
 //     @keyframes cf3FadeInOut {
 //     0% {
 //     opacity:1;
@@ -108,20 +152,20 @@
 //     opacity:0;
 //     }
 //     }
-    
+
 //     #img_container img.top {
 //     -webkit-animation-name: cf3FadeInOut;
 //     -webkit-animation-timing-function: ease-in-out;
 //     -webkit-animation-iteration-count: infinite;
 //     -webkit-animation-duration: 5s;
 //     -webkit-animation-direction: alternate;
-    
+
 //     -moz-animation-name: cf3FadeInOut;
 //     -moz-animation-timing-function: ease-in-out;
 //     -moz-animation-iteration-count: infinite;
 //     -moz-animation-duration: 5s;
 //     -moz-animation-direction: alternate;
-    
+
 //     -o-animation-name: cf3FadeInOut;
 //     -o-animation-timing-function: ease-in-out;
 //     -o-animation-iteration-count: infinite;
