--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,7 @@ body {
   letter-spacing: -0.03em;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 h1,
@@ -206,13 +207,9 @@ a {
   transition: 400ms;
 }
 
-.page-header, .page-header__container, .page-header__main-contain, .page-header__title, .page-header__text, .illustration, .illustr, .description, .description__container, .service, .service__container, .competitors, .competitors__container, .questions, .questions__container {
+.page-header, .page-header__container, .page-header__main-contain, .page-header__title, .page-header__text, .illustration, .illustr, .service, .service__container, .questions, .questions__container {
   margin-right: auto;
   margin-left: auto;
-}
-
-.page-header {
-  max-width: 100vw;
 }
 
 .page-header__container {
@@ -220,8 +217,8 @@ a {
   background-image: url("../images/headbbgimg.png");
   background-size: cover;
   background-position: center;
-  position: sticky;
   position: -webkit-sticky;
+  position: sticky;
   width: 100%;
   padding-top: 34px;
   top: 0;
@@ -233,35 +230,27 @@ a {
   padding: 0 15px 0 15px;
 }
 
-.logo {
+.logo_head {
   color: #FFFFFF;
   font-weight: 800;
+  font-style: normal;
   font-size: 30px;
   line-height: 0.8;
   padding: 0;
   margin: 0;
-  padding-left: 250px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  padding-left: 5vw;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100px;
-}
-
-.logo > p {
   width: 100%;
 }
 
 .logo__icon {
   padding: 0;
-  margin: 0;
+  margin: 0 10px 0 0;
   display: inline-block;
   width: 45px;
   height: 45px;
@@ -649,10 +638,12 @@ a {
 }
 
 .description {
+  margin: 0 auto;
   padding-top: 150px;
 }
 
 .description__container {
+  margin: 0 auto;
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
@@ -889,6 +880,7 @@ a {
 }
 
 .competitors {
+  margin: 0 auto;
   padding-top: 247px;
   padding-bottom: 250px;
   position: relative;
@@ -907,6 +899,7 @@ a {
 .competitors__container {
   padding-left: 15px;
   padding-right: 15px;
+  margin: 0 auto;
   position: relative;
   max-width: 1500px;
   -webkit-transition: -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1044,9 +1037,19 @@ a {
 }
 
 .questions__text-contain {
-  max-width: 876px;
+  max-width: 900px;
   width: 100%;
   margin-left: auto;
+}
+
+.bgb3 {
+  bottom: -8%;
+  left: -5%;
+}
+
+.bgp3 {
+  top: 40%;
+  right: 5%;
 }
 
 .questions__title {
@@ -1168,26 +1171,55 @@ a {
   height: 275px;
   width: 423px;
   margin: 0 auto;
+  margin-left: 28px;
+  -webkit-filter: drop-shadow(20px 20px 80px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(20px 20px 80px rgba(0, 0, 0, 0.15));
 }
 
 .animate-img {
   position: absolute;
-  height: 275px;
+  height: auto;
   width: 423px;
   left: 0;
   -webkit-transition: opacity 0.5s ease-in-out;
   transition: opacity 0.5s ease-in-out;
 }
 
+._shadov-img {
+  position: absolute;
+  top: 35%;
+  left: 20%;
+  width: 90%;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
+  -webkit-filter: blur(20px);
+          filter: blur(20px);
+  z-index: -1 !important;
+}
+
 .first-img {
   -webkit-animation-name: cf3FadeInOut;
           animation-name: cf3FadeInOut;
-  -webkit-animation-timing-function: ease-in-out;
-          animation-timing-function: ease-in-out;
+  -webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+          animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-  -webkit-animation-duration: 7s;
-          animation-duration: 7s;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+  z-index: 1;
+}
+
+.sec-img {
+  -webkit-animation-name: hhhhhjjjjj;
+          animation-name: hhhhhjjjjj;
+  -webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+          animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
   -webkit-animation-direction: alternate;
           animation-direction: alternate;
   z-index: 1;
@@ -1197,10 +1229,10 @@ a {
   0% {
     opacity: 1;
   }
-  45% {
+  40% {
     opacity: 1;
   }
-  55% {
+  60% {
     opacity: 0;
   }
   100% {
@@ -1212,14 +1244,44 @@ a {
   0% {
     opacity: 1;
   }
-  45% {
+  40% {
     opacity: 1;
   }
-  55% {
+  60% {
     opacity: 0;
   }
   100% {
     opacity: 0;
+  }
+}
+
+@-webkit-keyframes hhhhhjjjjj {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes hhhhhjjjjj {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
@@ -1230,6 +1292,20 @@ a {
 .clients__container {
   margin: 0 auto;
   max-width: 1500px;
+}
+
+.clients__title {
+  max-width: 1300px;
+  width: 100%;
+  margin: 0 auto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 110%;
+  /* or 70px */
+  letter-spacing: 0.01em;
+  color: #000000;
+  margin-bottom: 103px;
 }
 
 .clients__baner {
@@ -1244,13 +1320,13 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 100%;
   max-width: 1226px;
   background: #FFFFFF;
   -webkit-box-shadow: 0px 25px 100px -10px rgba(110, 118, 129, 0.2);
           box-shadow: 0px 25px 100px -10px rgba(110, 118, 129, 0.2);
   border-radius: 11px;
   padding: 81px 89px 55px 85px;
-  overflow: hidden;
   position: relative;
 }
 
@@ -1430,7 +1506,7 @@ a {
 }
 
 .slider {
-  max-width: 90%;
+  max-width: 100%;
   position: relative;
   margin: auto;
   margin-bottom: 15px;
@@ -1471,11 +1547,82 @@ a {
 
 .form-section {
   margin: 0 auto;
-  background-image: url("./images/form-bg.png");
+  background-image: url("../images/form-bg.png");
+  background-size: cover;
+  background-position: center;
+  min-height: 1363px;
+  margin-top: -244px;
+  z-index: -50;
+  position: relative;
 }
 
 .form-container {
   margin: 0 auto;
+  max-width: 1500px;
+  position: relative;
+}
+
+.bg-balls {
+  position: absolute;
+  z-index: -1;
+}
+
+.bg-balls.bgb4 {
+  bottom: 25%;
+  left: 5%;
+}
+
+.bg-balls.bgb5 {
+  top: 40%;
+  right: 15%;
+}
+
+.bg-balls.bgb6 {
+  top: 12%;
+  right: 10%;
+}
+
+.bg-balls.bgb7 {
+  bottom: -15%;
+  right: -10%;
+}
+
+.form__title {
+  padding-top: 400px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 110%;
+  /* or 70px */
+  text-align: center;
+  letter-spacing: 0.01em;
+  color: #000000;
+}
+
+.form__description {
+  max-width: 821px;
+  margin: 0 auto;
+  margin-top: 21px;
+  margin-bottom: 114px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 1.33;
+  /* or 133% */
+  text-align: center;
+  color: #000000;
+}
+
+.form-body {
+  margin: 0 auto;
+  max-width: 651px;
+  width: 100%;
+  padding: 50px 50px 100px 50px;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 10px 80px -10px rgba(110, 118, 129, 0.25);
+          box-shadow: 0px 10px 80px -10px rgba(110, 118, 129, 0.25);
+  border-radius: 11px;
+  z-index: 15;
 }
 
 .form {
@@ -1487,29 +1634,183 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  max-width: 651px;
-  padding: 50px 50px 100px 50px;
+  width: 100%;
+  max-width: 555px;
+  z-index: 10;
 }
 
 .form > input {
-  border: 0 0 1px 0;
+  width: 100%;
+  background: none;
+  border: none;
+  border-bottom: 1px solid #6e7681;
+  padding: 5px 0;
+  margin-bottom: 40px;
+}
+
+.form > input::-webkit-input-placeholder {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 32px;
+  /* identical to box height, or 160% */
+  color: #6e7681;
+}
+
+.form > input:-ms-input-placeholder {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 32px;
+  /* identical to box height, or 160% */
+  color: #6e7681;
+}
+
+.form > input::-ms-input-placeholder {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 32px;
+  /* identical to box height, or 160% */
+  color: #6e7681;
+}
+
+.form > input::placeholder {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 32px;
+  /* identical to box height, or 160% */
+  color: #6e7681;
+}
+
+.form__upload {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 1.6;
+  margin-bottom: 78px;
+  color: #404751;
+}
+
+.form__upload::after {
+  content: "";
+  background-image: url("../images/upload.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 24px;
+  height: 24px;
+}
+
+#upload {
+  display: none;
+  width: 24px;
+  height: 24px;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+}
+
+.form__recapcha {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  position: relative;
+  color: #404751;
+}
+
+.form__recapcha > span {
+  display: flexbox;
+  margin-left: 17px;
+  width: 25px;
+  height: 25px;
+  content: url("../images/recap.svg");
+}
+
+.form__recapcha::before {
+  display: block;
+  position: absolute;
+  left: 0;
+  left: -50px;
+  width: 35px;
+  height: 35px;
+  border: 1px solid;
+  content: "";
+}
+
+#notRobot {
+  width: 35px;
+  height: 35px;
+  margin-right: 15px;
+  padding: 0;
+  cursor: pointer;
+  z-index: 10;
+  opacity: 0;
+}
+
+#notRobot:checked + .form__recapcha::before {
+  content: url("/images/formpointer.svg");
+  fill: #47BAFB;
+}
+
+.form__down {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.input-check {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+
+.form-btn {
+  width: 214px;
+  height: 63px;
+  background: #47bafb;
+  border-radius: 31.5px;
+  border: none;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.5;
+  /* identical to box height, or 150% */
+  text-align: center;
+  color: #ffffff;
 }
 
 .footer {
   margin: 0 auto;
-}
-
-.footer__title {
-  font-style: normal;
-  font-weight: 900;
-  font-size: 64px;
-  line-height: 88px;
-  letter-spacing: 0.01em;
-  color: #FFFFFF;
-}
-
-.footer__title > span {
-  color: brown;
+  margin-top: -100px;
 }
 
 .footer__desc {
@@ -1522,13 +1823,12 @@ a {
   color: #949DA7;
 }
 
-.footter__contain {
+.footer__contain {
   position: relative;
   text-align: center;
-  color: white;
+  background: none;
   margin: 0 auto;
-  margin-top: -15vh;
-  z-index: -1;
+  z-index: 0;
 }
 
 .logo {
