--- a/sass/components/_competitors.scss
+++ b/sass/components/_competitors.scss
@@ -1,5 +1,5 @@
 .competitors {
-  @extend %auto-margin;
+  margin: 0 auto;
   padding-top: 247px;
   padding-bottom: 250px;
   position: relative;
@@ -15,7 +15,7 @@
 .competitors__container {
   padding-left: 15px;
   padding-right: 15px;
-  @extend %auto-margin;
+  margin: 0 auto;
   position: relative;
   max-width: 1500px;
   transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
