--- a/sass/components/_description.scss
+++ b/sass/components/_description.scss
@@ -1,9 +1,9 @@
 .description { 
-    @extend %auto-margin;
+  margin: 0 auto;
     padding-top: 150px;
 }
 .description__container {
-  @extend %auto-margin;
+  margin: 0 auto;
   max-width: max-content;
   }
 .description__first {
