--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,18 +1,19 @@
 .footer {
   margin: 0 auto;
+  margin-top: -100px;
 }
-.footer__title {
-  font-style: normal;
-font-weight: 900;
-font-size: 64px;
-line-height: 88px;
-letter-spacing: 0.01em;
+// .footer__title {
+//   font-style: normal;
+// font-weight: 900;
+// font-size: 64px;
+// line-height: 88px;
+// letter-spacing: 0.01em;
 
-color: #FFFFFF;
-&>span {
-  color: brown;
-}
-}
+// color: #FFFFFF;
+// &>span {
+//   color: brown;
+// }
+// }
 .footer__desc {
   font-style: normal;
 font-weight: 600;
@@ -25,20 +26,26 @@ letter-spacing: 0.02em;
 color: #949DA7;
 }
 
-.footter__contain {
+.footer__contain {
+  // margin: 0 auto;
   position: relative;
   text-align: center;
-  // background: linear-gradient(
-  //   60deg,
-  //   rgba(84, 58, 183, 1) 0%,
-  //   rgba(0, 172, 193, 1) 100%
-  // );
-  color: white;
+  background: none;
   margin: 0 auto;
-  margin-top: -15vh;
-  z-index: -1;
+  z-index: 0;
+  
+//  background: linear-gradient(
+//     60deg,
+//     rgba(84, 58, 183, 1) 0%,
+//     rgba(0, 172, 193, 1) 100%
+//   );
+  // &svg {
+  //   height: 300px;
+  // }
+  // color: white;
   // max-width: 100vw;
   // overflow: hidden;
+  // margin-top: -200px;
 }
 .logo {
   width: 50px;
