--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,6 +1,6 @@
 .page-header {
   @extend %auto-margin;
-  max-width: 100vw;
+  // max-width: 100vw;
   // padding-bottom: 20px;
 }
 .page-header__container {
@@ -12,15 +12,9 @@
   background-size: cover;
   background-position: center;
   position: sticky;
-  position: -webkit-sticky;
-  // max-width: 1920px;
   width: 100%;
-
-  // @extend %contain-padding;
-  @extend %auto-margin;
   padding-top: 34px;
   top: 0;
-  // max-width: 1500px;
 }
 .page-header__main-contain {
   max-width: 1600px;
@@ -29,27 +23,27 @@
   padding: 0 15px 0 15px;
   
 }
-.logo {
+.logo_head {
   color: $sec-white;
   font-weight: 800;
-  // font-style: normal;
+  font-style: normal;
   font-size: 30px;
   line-height: 0.8;
   padding: 0;
   margin: 0;
-  padding-left: 250px;
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: center;
+  padding-left: 5vw;
+  display: inline-flex;
+  // flex-wrap: nowrap;
+  // justify-content: center;
   align-items: center;
-  width: 100px;
-  &>p{
-    width: 100%;
-  }
+  width: 100%;
+  // width: 100px;
+  
 }
 .logo__icon {
   padding: 0;
-  margin: 0;
+  margin: 0 10px 0 0 ;
+  
 
   display: inline-block;
   width: 45px;
