--- a/css/main.css
+++ b/css/main.css
@@ -207,27 +207,60 @@ a {
   transition: 400ms;
 }
 
-.page-header, .page-header__container, .page-header__main-contain, .page-header__title, .page-header__text, .illustration, .illustr, .service, .service__container, .questions, .questions__container {
+.page-header__main-contain, .page-header__title, .page-header__text, .illustration, .illustr, .service, .service__container, .questions, .questions__container {
   margin-right: auto;
   margin-left: auto;
 }
 
+.page-header {
+  margin: 0 auto;
+  max-width: 100vw;
+}
+
 .page-header__container {
+  margin: 0 auto;
   height: 707px;
   background-image: url("../images/headbbgimg.png");
   background-size: cover;
   background-position: center;
-  position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
   width: 100%;
   padding-top: 34px;
   top: 0;
+  z-index: -1;
+}
+
+@media screen and (max-width: 750px) {
+  .page-header__container {
+    max-width: 750px;
+    max-height: 450px;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .page-header__container {
+    max-width: 543px;
+    height: 300px;
+  }
 }
 
 .page-header__main-contain {
   max-width: 1600px;
   width: 100%;
   padding: 0 15px 0 15px;
+}
+
+@media screen and (max-width: 750px) {
+  .page-header__main-contain {
+    max-width: 750px;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .page-header__main-contain {
+    max-width: 543px;
+    height: 200px;
+  }
 }
 
 .logo_head {
@@ -264,12 +297,29 @@ a {
   font-size: 96px;
   line-height: 1;
   text-align: center;
+  width: 100%;
   max-width: 1600px;
 }
 
 @media screen and (max-width: 1500px) {
   .page-header__title {
     font-size: 72px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .page-header__title {
+    font-size: 48px;
+    max-width: 750px;
+    margin-top: 18px;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .page-header__title {
+    font-size: 32px;
+    max-width: 543px;
+    margin-top: 30px;
   }
 }
 
@@ -281,6 +331,19 @@ a {
   line-height: 133%;
   text-align: center;
   max-width: 990px;
+}
+
+@media screen and (max-width: 750px) {
+  .page-header__text {
+    margin-top: 70px;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .page-header__text {
+    font-size: 16px;
+    margin-top: 50px;
+  }
 }
 
 .rotating-text p {
@@ -320,6 +383,18 @@ a {
   }
 }
 
+@media screen and (max-width: 750px) {
+  .rotating-text p .word {
+    font-size: 48px;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .rotating-text p .word {
+    font-size: 32px;
+  }
+}
+
 .rotating-text p .word .letter.out {
   -webkit-transform: rotateX(90deg);
           transform: rotateX(90deg);
@@ -328,8 +403,13 @@ a {
 }
 
 .rotating-text p .word .letter.in {
-  -webkit-transition: 0.38s ease;
-  transition: 0.38s ease;
+  -webkit-transition: 0.38s cubic-bezier(0.6, 0, 0.7, 0.2);
+  transition: 0.38s cubic-bezier(0.6, 0, 0.7, 0.2);
+}
+
+.rotating-text p .word .letter.in.__long {
+  -webkit-transition: 0.1s cubic-bezier(0.6, 0, 0.7, 0.2);
+  transition: 0.1s cubic-bezier(0.6, 0, 0.7, 0.2);
 }
 
 .rotating-text p .word .letter.behind {
@@ -338,16 +418,22 @@ a {
 }
 
 .illustration {
-  margin-top: -175px;
+  margin-top: 350px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (max-width: 750px) {
+  .illustration {
+    margin-top: 150px;
+  }
 }
 
 .illustr {
@@ -379,6 +465,13 @@ a {
   border-radius: 50%;
 }
 
+@media screen and (max-width: 543px) {
+  .loading .over_play {
+    width: 100px;
+    height: 100px;
+  }
+}
+
 .loading .p-wrapper {
   width: 207px;
   height: 207px;
@@ -396,6 +489,13 @@ a {
   transition: .6s;
 }
 
+@media screen and (max-width: 543px) {
+  .loading .p-wrapper {
+    width: 100px;
+    height: 100px;
+  }
+}
+
 .loading .p-wrapper .layer--overlay {
   background: #ffffff;
   width: 60%;
@@ -410,11 +510,25 @@ a {
   transition: .6s;
 }
 
+.layer--overlay {
+  -webkit-box-shadow: 0em 0em 30px 10px #020202;
+          box-shadow: 0em 0em 30px 10px #020202;
+  z-index: 5;
+  border-radius: 50%;
+}
+
 .loading .p-wrapper .layer--movable {
   width: 207px;
   height: 207px;
   border-radius: 100%;
   position: absolute;
+}
+
+@media screen and (max-width: 543px) {
+  .loading .p-wrapper .layer--movable {
+    width: 100px;
+    height: 100px;
+  }
 }
 
 .loading .preview {
@@ -462,6 +576,13 @@ a {
   z-index: 10;
 }
 
+@media screen and (max-width: 543px) {
+  .loading .preview .player {
+    width: 100px;
+    height: 100px;
+  }
+}
+
 .loading .preview .item {
   left: 0;
   background: black;
@@ -498,11 +619,18 @@ a {
   display: -ms-flexbox;
   display: flex;
   position: absolute;
-  left: 50%;
+  left: 51%;
   top: 50%;
   z-index: 100;
-  -webkit-transform: translate(-50%, -49%);
-          transform: translate(-50%, -49%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 543px) {
+  .btnImg {
+    width: 25px;
+    height: 30px;
+  }
 }
 
 .loading .preview .bg_play {
@@ -639,14 +767,62 @@ a {
 
 .description {
   margin: 0 auto;
-  padding-top: 150px;
+  padding-top: 200px;
+  width: 100%;
+}
+
+@media screen and (max-width: 750px) {
+  .description {
+    padding: 350;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .description {
+    max-width: 543px;
+    height: 200px;
+  }
+}
+
+.desc-bg {
+  margin: 0 auto;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: 2;
+}
+
+@media screen and (max-width: 750px) {
+  .desc-bg {
+    max-width: 750px;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .desc-bg {
+    max-width: 543px;
+    width: 100%;
+  }
 }
 
 .description__container {
+  padding-top: 150px;
   margin: 0 auto;
-  max-width: -webkit-max-content;
-  max-width: -moz-max-content;
-  max-width: max-content;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  max-width: 100%;
+}
+
+@media screen and (max-width: 750px) {
+  .description__container {
+    max-width: 750px;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .description__container {
+    max-width: 543px;
+  }
 }
 
 .description__first {
@@ -669,6 +845,23 @@ a {
   margin-left: 123px;
   margin-right: 29px;
   position: relative;
+  padding-left: 15%;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
+@media screen and (max-width: 750px) {
+  .description__text-contain {
+    padding-left: 100px;
+    max-width: 350px;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .description__text-contain {
+    padding-left: 100px;
+    max-width: 350px;
+  }
 }
 
 .description__text-contain::before {
@@ -679,7 +872,15 @@ a {
   position: absolute;
   top: -15%;
   left: 12%;
-  z-index: -1;
+  z-index: 0;
+}
+
+@media screen and (max-width: 750px) {
+  .description__text-contain::before {
+    width: 70px;
+    height: 70px;
+    background-size: contain;
+  }
 }
 
 .description__title {
@@ -690,6 +891,13 @@ a {
   letter-spacing: 0.01em;
   margin-bottom: 51px;
   color: #24292F;
+  z-index: 3;
+}
+
+@media screen and (max-width: 750px) {
+  .description__title {
+    font-size: 32px;
+  }
 }
 
 .description__text {
@@ -701,15 +909,56 @@ a {
   color: #6E7681;
 }
 
+@media screen and (max-width: 750px) {
+  .description__text {
+    font-size: 16px;
+  }
+}
+
 .description__point-first {
   width: 420px;
   height: 247px;
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: -35%;
+}
+
+@media screen and (max-width: 750px) {
+  .description__point-first {
+    width: 210px;
+    height: 123px;
+    top: 30px;
+    left: 0%;
+  }
 }
 
 .description__point-sec {
   position: absolute;
   right: -10%;
   top: 50%;
+}
+
+@media screen and (max-width: 750px) {
+  .description__point-sec {
+    width: 120px;
+    height: 200px;
+    right: 7%;
+    top: 40%;
+    -webkit-transform: translate(0) !important;
+            transform: translate(0) !important;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .description__point-sec {
+    width: 120px;
+    height: 200px;
+    right: 7%;
+    top: 40%;
+    -webkit-transform: none;
+            transform: none;
+  }
 }
 
 .description__list-contain {
@@ -726,6 +975,12 @@ a {
   margin: 0 auto;
 }
 
+@media screen and (max-width: 750px) {
+  .description__list-contain {
+    max-width: 720px;
+  }
+}
+
 .description__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -737,10 +992,45 @@ a {
   padding: 0;
 }
 
+@media screen and (max-width: 750px) {
+  .description__list {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .description__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .description__item {
-  width: calc((100% - 6 * 20px) / 3);
+  width: calc((100% - 6 * 25px) / 3);
   max-width: 300px;
-  margin: 20px;
+  margin: 25px;
+}
+
+@media screen and (max-width: 750px) {
+  .description__item {
+    width: calc((100% - 4 * 25px) / 2);
+    margin: 25px;
+    max-width: none;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .description__item {
+    width: calc((100% - 2 * 25px));
+    max-width: 450px;
+    margin: 20px;
+  }
 }
 
 .description__item__picture {
@@ -771,8 +1061,21 @@ a {
 }
 
 .service__container {
+  padding: 0 15px;
   max-width: 1260px;
   width: 100%;
+}
+
+@media screen and (max-width: 750px) {
+  .service__container {
+    max-width: 750px;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .service__container {
+    max-width: 543px;
+  }
 }
 
 .service__title {
@@ -784,13 +1087,20 @@ a {
   letter-spacing: 0.01em;
 }
 
+@media screen and (max-width: 750px) {
+  .service__title {
+    font-size: 32px;
+    padding-left: 50px;
+  }
+}
+
 .service__title > span {
   color: #FEFFFF;
   position: relative;
 }
 
 .service__title > span::before {
-  content: '';
+  content: "";
   position: absolute;
   background-image: url("../images/bg-ball1.png");
   width: 210px;
@@ -802,6 +1112,14 @@ a {
   z-index: -1;
 }
 
+@media screen and (max-width: 750px) {
+  .service__title > span::before {
+    width: 110px;
+    height: 110px;
+    background-size: contain;
+  }
+}
+
 .service__content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -809,8 +1127,17 @@ a {
   margin-top: 49px;
 }
 
+@media screen and (max-width: 750px) {
+  .service__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .service__list {
   margin: 0;
+  padding: 0;
 }
 
 .service__item {
@@ -820,14 +1147,26 @@ a {
   line-height: 1.25;
   letter-spacing: 0.01em;
   padding: 17px 0 26px 24px;
+  cursor: pointer;
   width: 250px;
-  color: #949DA7;
+  color: #949da7;
+}
+
+@media screen and (max-width: 750px) {
+  .service__item {
+    font-size: 16px;
+    max-width: 200px;
+    padding: 10px 10px;
+  }
 }
 
 .service__item__current {
-  background-color: #F6F8FA;
+  background-color: #f6f8fa;
   border-radius: 4px;
   color: #24292F;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 20px;
 }
 
 .service__content__list {
@@ -848,14 +1187,33 @@ a {
       flex-wrap: wrap;
 }
 
+@media screen and (max-width: 750px) {
+  .service__content__list__active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .service__content__item {
-  width: calc((100% - 129px)/2);
+  width: calc((100% - 129px) / 2);
   margin-right: 129px;
   z-index: 1;
 }
 
 .service__content__item:nth-child(2n) {
   margin: 0;
+}
+
+@media screen and (max-width: 750px) {
+  .service__content__item {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
 
 .service__content__title {
@@ -869,6 +1227,12 @@ a {
   color: #000000;
 }
 
+@media screen and (max-width: 750px) {
+  .service__content__title {
+    margin-bottom: 10px;
+  }
+}
+
 .service__content__text {
   font-style: normal;
   font-weight: 500;
@@ -876,7 +1240,7 @@ a {
   line-height: 150%;
   /* or 24px */
   letter-spacing: 0.01em;
-  color: #949DA7;
+  color: #949da7;
 }
 
 .competitors {
@@ -884,16 +1248,8 @@ a {
   padding-top: 247px;
   padding-bottom: 250px;
   position: relative;
-}
-
-.competitors:hover .banner__overlay {
-  opacity: 0.8;
-  z-index: -5;
-}
-
-.competitors:hover .competitors__container {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .competitors__container {
@@ -902,50 +1258,79 @@ a {
   margin: 0 auto;
   position: relative;
   max-width: 1500px;
-  -webkit-transition: -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 10;
+  -webkit-transition: -webkit-transform 750ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 750ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 750ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.competitors__container::before {
-  content: "";
-  background-image: url("../images/Polygon.png");
-  width: 893px;
-  height: 893px;
-  position: absolute;
-  z-index: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  left: -10%;
-  top: -25%;
+@media screen and (max-width: 750px) {
+  .competitors__container {
+    max-width: 750px;
+  }
 }
 
-.competitors__container::after {
-  content: "";
-  background-image: url("../images/bg-ball1.png");
-  width: 520px;
-  height: 520px;
-  position: absolute;
-  z-index: -1;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  right: -5%;
-  bottom: -15%;
+@media screen and (max-width: 543px) {
+  .competitors__container {
+    max-width: 543px;
+  }
 }
 
 .competitors__baner {
-  max-width: 1480px;
-  height: 624px;
   margin: 0 auto;
-  background: content-box url("../images/baner.png");
+  width: 100%;
+  max-width: 75vw;
+  padding: 25px;
+  background-color: blue;
+  background: -webkit-gradient(linear, left top, left bottom, from(#3264ee), to(#616df0));
+  background: linear-gradient(#3264ee, #616df0);
   background-size: cover;
-  z-index: 10;
   -webkit-filter: drop-shadow(0px 55px 100px rgba(0, 0, 0, 0.25));
           filter: drop-shadow(0px 55px 100px rgba(0, 0, 0, 0.25));
   border-radius: 11px;
+}
+
+.competitors__baner::before {
+  content: "";
+  background: url("../images/Polygon.png");
+  width: 30vw;
+  height: 30vw;
+  position: absolute;
+  z-index: -1000 !important;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  left: -10vw;
+  top: -10vw;
+}
+
+.competitors__baner::after {
+  content: "";
+  background: url("../images/bg-ball1.png");
+  width: 15vw;
+  height: 15vw;
+  position: absolute;
+  z-index: -1000 !important;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  right: -10vw;
+  bottom: -5vw;
+}
+
+@media screen and (max-width: 750px) {
+  .competitors__baner::after {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .competitors__baner::after {
+    width: 150px;
+    height: 150px;
+  }
 }
 
 .banner__overlay {
@@ -955,7 +1340,7 @@ a {
   width: 200vw;
   height: 200vw;
   background-color: #5738c7c4;
-  z-index: -1;
+  z-index: -5;
   opacity: 0;
   pointer-events: none;
   -webkit-transition: opacity 350ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -974,6 +1359,15 @@ a {
   color: #ffffff;
 }
 
+@media screen and (max-width: 750px) {
+  .competitors_title {
+    font-size: 32px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .competitors__text {
   font-style: normal;
   font-weight: normal;
@@ -988,6 +1382,15 @@ a {
 
 .competitors__text > span {
   font-weight: 700;
+}
+
+@media screen and (max-width: 750px) {
+  .competitors__text {
+    font-size: 16px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .competitors__btn {
@@ -1036,10 +1439,34 @@ a {
   max-width: 1500px;
 }
 
+@media screen and (max-width: 750px) {
+  .questions__container {
+    max-width: 750px;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .questions__container {
+    max-width: 543px;
+  }
+}
+
 .questions__text-contain {
   max-width: 900px;
   width: 100%;
   margin-left: auto;
+}
+
+@media screen and (max-width: 750px) {
+  .questions__text-contain {
+    max-width: 750px;
+  }
+}
+
+@media screen and (max-width: 543px) {
+  .questions__text-contain {
+    max-width: 543px;
+  }
 }
 
 .bgb3 {
@@ -1060,6 +1487,12 @@ a {
   letter-spacing: 0.01em;
   margin-bottom: 46px;
   color: #000000;
+}
+
+@media screen and (max-width: 750px) {
+  .questions__title {
+    font-size: 32px;
+  }
 }
 
 .questions__text {
@@ -1102,6 +1535,7 @@ a {
   border-radius: 10px;
   margin-bottom: 15px;
   background-color: #ffffff;
+  cursor: pointer;
 }
 
 .questions__item__btn-contain {
@@ -1113,9 +1547,12 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.questions__item__text {
+.questions__item__title {
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
@@ -1146,24 +1583,24 @@ a {
 }
 
 .questions__item__content {
+  overflow: hidden;
+  width: 90%;
+  height: 0;
+  -webkit-transition: height 1s;
+  transition: height 1s;
+  /* or 133% */
+}
+
+.questions__item__text {
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
   line-height: 32px;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  -webkit-transition: width 2000 linear;
-  transition: width 2000 linear;
   /* or 133% */
-  color: #6e7681;
-}
-
-.questions__item__content.active_item {
-  width: 90%;
-  height: auto;
-  margin: 15px;
+  color: #6E7681;
+  height: 100%;
+  width: 100%;
+  padding-left: 15px;
 }
 
 .img__container {
@@ -1287,6 +1724,8 @@ a {
 
 .clients {
   margin: 0 auto;
+  z-index: 1;
+  position: relative;
 }
 
 .clients__container {
@@ -1552,7 +1991,7 @@ a {
   background-position: center;
   min-height: 1363px;
   margin-top: -244px;
-  z-index: -50;
+  z-index: 0;
   position: relative;
 }
 
@@ -1636,7 +2075,8 @@ a {
           flex-direction: column;
   width: 100%;
   max-width: 555px;
-  z-index: 10;
+  position: relative;
+  z-index: 999;
 }
 
 .form > input {
@@ -1817,13 +2257,13 @@ a {
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
-  line-height: 24px;
-  /* or 171% */
+  line-height: 1.71;
   letter-spacing: 0.02em;
   color: #949DA7;
 }
 
 .footer__contain {
+  margin: 0 auto;
   position: relative;
   text-align: center;
   background: none;
@@ -1870,13 +2310,13 @@ a {
   max-width: 1200px;
   height: 1px;
   width: 100%;
-  margin-top: 120px;
+  margin-top: 50px;
 }
 
 .waves {
   position: relative;
   width: 100%;
-  height: 15vh;
+  height: 25vh;
   margin-bottom: -7px;
   /*Fix for safari gap*/
   min-height: 100px;
