--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -18,16 +18,13 @@
   font-style: normal;
 font-weight: 600;
 font-size: 14px;
-line-height: 24px;
-/* or 171% */
-
+line-height: 1.71;
 letter-spacing: 0.02em;
-
 color: #949DA7;
 }
 
 .footer__contain {
-  // margin: 0 auto;
+  margin: 0 auto;
   position: relative;
   text-align: center;
   background: none;
@@ -77,12 +74,12 @@ color: #949DA7;
   max-width: 1200px;
   height: 1px;
   width: 100%;
-margin-top: 120px;}
+margin-top: 50px;}
 
 .waves {
   position: relative;
   width: 100%;
-  height: 15vh;
+  height: 25vh;
   margin-bottom: -7px; /*Fix for safari gap*/
   min-height: 100px;
   max-height: 150px;
