--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -5,7 +5,7 @@
   background-position: center;
   min-height: 1363px;
   margin-top: -244px;
-  z-index: -50;
+  z-index: 0;
   position: relative;
   
 }
@@ -13,6 +13,7 @@
   margin: 0 auto;
   max-width: 1500px;
   position: relative;
+  
 }
 .bg-balls {
     position: absolute;
@@ -78,7 +79,9 @@
   background: #ffffff;
   box-shadow: 0px 10px 80px -10px rgba(110, 118, 129, 0.25);
   border-radius: 11px;
+  
   z-index: 15;
+
 }
 .form {
   margin: 0 auto;
@@ -86,7 +89,9 @@
   flex-direction: column;
   width: 100%;
   max-width: 555px;
-  z-index: 10;
+  // z-index: 10;
+  position: relative;
+  z-index: 999;
 
   & > input {
     width: 100%;
