--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,27 +1,45 @@
 .page-header {
-  @extend %auto-margin;
-  // max-width: 100vw;
+  margin: 0 auto;
+  max-width: 100vw;
   // padding-bottom: 20px;
 }
+
 .page-header__container {
-  @extend %auto-margin;
+  margin: 0 auto;
   // overflow: hidden;
   // max-width: 1920px;
   height: 707px;
   background-image: url("../images/headbbgimg.png");
   background-size: cover;
   background-position: center;
-  position: sticky;
+  position: fixed;
   width: 100%;
   padding-top: 34px;
   top: 0;
+  z-index: -1;
+  @media screen and (max-width: 750px) {
+    max-width: 750px;
+    max-height: 450px;
+  }
+  @media screen and (max-width: 543px) {
+    max-width: 543px;
+    height: 300px;
+  }
 }
 .page-header__main-contain {
   max-width: 1600px;
   width: 100%;
   @extend %auto-margin;
   padding: 0 15px 0 15px;
-  
+  @media screen and (max-width: 750px) {
+    max-width: 750px;
+    
+  }
+  @media screen and (max-width: 543px) {
+    max-width: 543px;
+    height: 200px;
+  }
+ 
 }
 .logo_head {
   color: $sec-white;
@@ -33,11 +51,10 @@
   margin: 0;
   padding-left: 5vw;
   display: inline-flex;
-  // flex-wrap: nowrap;
-  // justify-content: center;
+ 
   align-items: center;
   width: 100%;
-  // width: 100px;
+ 
   
 }
 .logo__icon {
@@ -59,9 +76,20 @@
   font-size: 96px;
   line-height: 1;
   text-align: center;
+  width: 100%;
   max-width: 1600px;
   @media screen and (max-width: 1500px) {
     font-size: 72px;
+  }
+  @media screen and (max-width: 750px) {
+    font-size: 48px;
+    max-width: 750px;
+    margin-top: 18px;
+  }
+  @media screen and (max-width: 543px) {
+    font-size: 32px;
+    max-width: 543px;
+    margin-top: 30px;
   }
 }
 .page-header__text {
@@ -73,4 +101,14 @@
   line-height: 133%;
   text-align: center;
   max-width: 990px;
+  @media screen and (max-width: 750px) {
+    
+    margin-top: 70px;
+  }
+@media screen and (max-width: 543px) {
+    font-size: 16px;
+    margin-top: 50px;
+  }
+ 
+
 }
