--- a/sass/components/_questions.scss
+++ b/sass/components/_questions.scss
@@ -9,7 +9,12 @@
   flex-direction: column;
   position: relative;
   max-width: 1500px;
-  
+  @media screen and (max-width: 750px) {
+    max-width: 750px;
+  }
+  @media screen and (max-width: 543px) {
+    max-width: 543px;
+  }
 }
 .questions__text-contain {
   max-width: 900px;
@@ -19,7 +24,12 @@
 //   display: flex;
 //   flex-direction: column;
 //   align-items: flex-end;
-
+@media screen and (max-width: 750px) {
+  max-width: 750px;
+}
+@media screen and (max-width: 543px) {
+  max-width: 543px;
+}
 }
 .bgb3 {
   bottom: -8%;
@@ -41,6 +51,10 @@
   margin-bottom: 46px;
 
   color: #000000;
+  @media screen and (max-width: 750px) {
+    font-size: 32px;
+  }
+ 
 }
 .questions__text {
   font-style: normal;
@@ -71,14 +85,18 @@
   border-radius: 10px;
   margin-bottom: 15px;
   background-color: #ffffff;
+  cursor: pointer;
+  // z-index: 10;
+  // position: relative;
 }
 .questions__item__btn-contain {
   display: flex;
   width: 100%;
   padding: 15px;
   justify-content: space-between;
+  align-items: center;
 }
-.questions__item__text {
+.questions__item__title {
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
@@ -106,21 +124,32 @@
   z-index: -1;
 }
 .questions__item__content {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 32px;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+ 
   overflow: hidden;
-  transition: width 2000 linear;
+  width: 90%;
+  height: 0;
+  transition: height 1s;
+ 
   /* or 133% */
 
-  color: #6e7681;
-  &.active_item {
-    width: 90%;
-    height: auto;
-    margin: 15px;
-  }
+  
+  // &.active_item {
+  //   width: 90%;
+  //   height: auto;
+  //   margin: 15px;
+  // }
+}
+.questions__item__text {
+  font-style: normal;
+font-weight: 500;
+font-size: 24px;
+line-height: 32px;
+/* or 133% */
+
+
+color: #6E7681;
+  height: 100%;
+  width: 100%;
+  padding-left: 15px;
+  
 }
